samples/_failures_safe/1761492536_7c4d84_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_28bed659.c: In function ‘display_entries_by_level’:
./samples/SAFE/__tmp_28bed659.c:134:5: error: expected expression at end of input
  134 |     if (!
      |     ^~
./samples/SAFE/__tmp_28bed659.c:134:5: error: expected declaration or statement at end of input
